[tool.poetry]
name = "mybot"
version = "0.1.0"
description = "mybot"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot-plugin-manager = "^0.5.7"
nonebot-plugin-htmlrender = ">=0.0.4.1"
nonebot-plugin-chatrecorder = "^0.1.5"
nonebot-plugin-alias = "^0.3.0"
nonebot-plugin-withdraw = "^0.2.0"
nonebot-plugin-petpet = "^0.2.0"
nonebot-plugin-logo = "^0.2.0"
nonebot-plugin-memes = "^0.2.0"
nonebot-plugin-asoulcnki = "^0.2.0"
nonebot-plugin-shindan = "^0.2.0"
nonebot-plugin-remake = "^0.2.0"
nonebot-plugin-caiyunai = "^0.2.0"
nonebot-plugin-emojimix = "^0.1.0"
nonebot-plugin-chess = "^0.1.0"
nonebot-plugin-wordcloud = "^0.1.0"
nonebot-plugin-word-bank2 = "^0.1.0"
nonebot-plugin-gamedraw = "^0.3.0"
nonebot-plugin-heweather = "^0.5.2"
nonebot-plugin-ddcheck = "^0.1.0"
nonebot-plugin-simplemusic = "^0.1.0"
nonebot-plugin-hikarisearch = "^0.1.0"
nonebot-plugin-wordle = "^0.1.0"
nonebot-plugin-handle = "^0.1.0"
nonebot-plugin-minesweeper = "^0.1.0"
baike = "^1.5.0"
cachetools = "^5.0.0"
cos-python-sdk-v5 = "^1.9.0"
feedparser = "^6.0.0"
httpx = ">=0.19.0"
imageio = "^2.13.0"
Jinja2 = "^3.0.0"
langid = "^1.1.0"
lxml = "^4.7.0"
mcstatus = "^6.5.0"
numpy = "^1.21.0"
Pillow = ">=8.4.0"
PixivPy-Async = "^1.2.0"
playwright = "^1.17.0"
pydub = "^0.25.0"
python-Levenshtein-wheels = "^0.13.0"
tencentcloud-sdk-python = "^3.0.0"
thefuzz = "^0.19.0"
wolframalpha = "^5.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
autopep8 = "^1.6.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
