[tool.poetry]
name = "mybot"
version = "0.1.0"
description = "mybot"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
baike = "^1.5.0"
cachetools = "^5.0.0"
cos-python-sdk-v5 = "^1.9.0"
feedparser = "^6.0.0"
httpx = ">=0.19.0"
Jinja2 = "^3.0.0"
langid = "^1.1.0"
lxml = "^4.7.0"
mcstatus = "^6.5.0"
Pillow = "^9.0.0"
PixivPy-Async = "^1.2.0"
pydub = "^0.25.0"
python-Levenshtein-wheels = "^0.13.0"
tencentcloud-sdk-python = "^3.0.0"
thefuzz = "^0.19.0"
wolframalpha = "^5.0.0"
cn2an = "^0.5.0"
nonebot2 = "^2.0.0-rc.1"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-manager = "^0.5.7"
nonebot-plugin-htmlrender = ">=0.0.4.1"
nonebot-plugin-withdraw = "^0.2.0"
nonebot-plugin-petpet = "^0.3.0"
nonebot-plugin-memes = "^0.3.0"
nonebot-plugin-shindan = "^0.2.0"
nonebot-plugin-remake = "^0.2.0"
nonebot-plugin-caiyunai = "^0.2.0"
nonebot-plugin-emojimix = "^0.1.0"
nonebot-plugin-wordcloud = "^0.1.0"
nonebot-plugin-word-bank2 = "^0.1.0"
# nonebot-plugin-gamedraw = "^0.3.0"
nonebot-plugin-heweather = "^0.5.2"
nonebot-plugin-ddcheck = "^0.1.0"
nonebot-plugin-simplemusic = "^0.1.0"
nonebot-plugin-hikarisearch = "^0.1.0"
nonebot-plugin-wordle = "^0.1.0"
nonebot-plugin-handle = "^0.1.0"
nonebot-plugin-minesweeper = "^0.1.0"
nonebot-plugin-boardgame = "^0.1.0"
nonebot-plugin-chess = "^0.2.0"
nonebot-plugin-cchess = "^0.1.0"
nonebot-plugin-imagetools = "^0.1.0"
nonebot-plugin-oddtext = "^0.1.0"
nonebot-plugin-random = "^0.0.7"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[tool.nonebot]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_manager",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_withdraw",
    "nonebot_plugin_petpet",
    "nonebot_plugin_memes",
    "nonebot_plugin_shindan",
    "nonebot_plugin_remake",
    "nonebot_plugin_caiyunai",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_word_bank2",
    "nonebot_plugin_gamedraw",
    "nonebot_plugin_heweather",
    "nonebot_plugin_ddcheck",
    "nonebot_plugin_simplemusic",
    "nonebot_plugin_hikarisearch",
    "nonebot_plugin_wordle",
    "nonebot_plugin_handle",
    "nonebot_plugin_minesweeper",
    "nonebot_plugin_boardgame",
    "nonebot_plugin_chess",
    "nonebot_plugin_cchess",
    "nonebot_plugin_imagetools",
    "nonebot_plugin_oddtext",
    "nonebot-plugin-random",
]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
