[tool.poetry]
name = "mybot"
version = "0.1.0"
description = "mybot"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bilireq = "^0.2.6"
cachetools = "^5.0.0"
dateparser = "^1.1.8"
httpx = ">=0.20.0"
Jinja2 = "^3.0.0"
lxml = "^5.0.0"
mcstatus = "^11.0.0"
Pillow = "^10.0.0"
wolframalpha = "^5.0.0"
nonebot2 = "^2.2.0"
nonebot-adapter-onebot = "^2.4.0"
# nonebot-adapter-red = "^0.9.0"
nonebot-plugin-apscheduler = "^0.4.0"
nonebot-plugin-boardgame = "^0.4.0"
nonebot-plugin-bracket = "^0.2.0"
nonebot-plugin-cchess = "^0.4.0"
nonebot-plugin-chatrecorder = "^0.6.0"
nonebot-plugin-chess = "^0.5.0"
nonebot-plugin-ddcheck = "^0.4.0"
nonebot-plugin-emojimix = "^0.4.0"
nonebot-plugin-handle = "^0.4.1"
nonebot-plugin-heweather = "^0.8.0"
nonebot-plugin-htmlrender = "^0.3.0"
nonebot-plugin-imagetools = "^0.4.0"
nonebot-plugin-memes = "^0.6.0"
nonebot-plugin-minesweeper = "^0.4.0"
nonebot-plugin-oddtext = "^0.2.0"
nonebot-plugin-orm = ">=0.7.0,<1.0.0"
nonebot-plugin-remake = "^0.4.0"
nonebot-plugin-send-anything-anywhere = "^0.6.0"
nonebot-plugin-session = "^0.3.0"
nonebot-plugin-shindan = "^0.6.0"
nonebot-plugin-userinfo = "^0.2.0"
nonebot-plugin-wordcloud = "^0.7.0"
nonebot-plugin-wordle = "^0.4.0"

[tool.poetry.group.dev.dependencies]

[tool.nonebot]
plugins = [
    "nonebot_plugin_boardgame",
    "nonebot_plugin_bracket",
    "nonebot_plugin_cchess",
    "nonebot_plugin_chatrecorder",
    "nonebot_plugin_chess",
    "nonebot_plugin_ddcheck",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_handle",
    "nonebot_plugin_heweather",
    "nonebot_plugin_imagetools",
    "nonebot_plugin_memes",
    "nonebot_plugin_minesweeper",
    "nonebot_plugin_oddtext",
    "nonebot_plugin_remake",
    "nonebot_plugin_shindan",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_wordle",
]
plugin_dirs = ["src/plugins"]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    # { name = "RedProtocol", module_name = "nonebot.adapters.red" },
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
